# pysysfan

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  LINUX_PLAN.md  README.md  SPEC.md  THIRD_PARTY_LICENSES.md  TODO.md  install-pysysfan.bat  install-pysysfan.sh  plan.md  pyproject.toml
.github/workflows/: release.yml  test-and-lint.yml
.plans/: 2026-03-09-pyside6-migration.md  2026-03-09-simplify-gui-statefile.md
docs/: config-schema.md  config.md  linux.md  windows.md
scripts/: install-pysysfan.bat
src/pysysfan/: __init__.py  cache.py  cli.py  config.py  curves.py  daemon.py  hardware.py  history_file.py  install.py  install_linux.py  notifications.py  profile_rules.py  profiles.py  service.py  service_entry.py  state_file.py  temperature.py  updater.py  watcher.py
src/pysysfan-stubs/: __init__.py  py.typed  winreg.pyi
src/pysysfan-stubs/clr/: __init__.pyi
src/pysysfan-stubs/pythonnet/: __init__.pyi
src/pysysfan/api/: __init__.py  auth.py  client.py  middleware.py  serializers.py  server.py  service_control.py  state.py  validation.py
src/pysysfan/api/routes/: __init__.py  alerts.py  config.py  core.py  profiles.py  service.py
src/pysysfan/assets/: __init__.py
src/pysysfan/gui/: __init__.py  __main__.py  build.py
src/pysysfan/gui/desktop/: __init__.py  accordion.py  app.py  curves_page.py  dashboard_page.py  data_provider.py  graphs_page.py  icons.py  local_backend.py  main_window.py  plotting.py  preferences.py  service_page.py  sidebar.py  theme.py
src/pysysfan/gui/tauri/src-tauri/: Cargo.toml  tauri.conf.json
src/pysysfan/gui/tauri/src-tauri/src/: build.rs
src/pysysfan/gui/web/: __init__.py  index.html  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
src/pysysfan/gui/web/src/: App.svelte  app.css
src/pysysfan/gui/web/src/components/curves/: CurveEditor.svelte  CurveGraph.svelte  CurveTable.svelte  FanSelector.svelte
src/pysysfan/gui/web/src/components/pages/: Dashboard.svelte  SettingsPage.svelte
src/pysysfan/gui/web/src/components/sensors/: FanGauge.svelte  SensorCard.svelte  SensorChart.svelte  TempGauge.svelte
src/pysysfan/gui/web/src/components/service/: LogViewer.svelte  ServiceStatus.svelte  StopButton.svelte
src/pysysfan/gui/web/src/lib/: api.ts  debounce.ts  stores.ts  types.ts
src/pysysfan/gui/web/src/lib/__tests__/: api.test.ts  types.test.ts
src/pysysfan/lhm/: __init__.py  download.py
src/pysysfan/pawnio/: __init__.py  download.py
tests/: test_api_auth.py  test_api_client.py  test_api_middleware.py  test_api_server.py  test_api_service.py  test_api_state.py  test_api_stream.py  test_cache.py  test_cli.py  test_cli_statefile.py  test_config.py  test_curves.py  test_daemon.py  test_daemon_state_file.py  test_data_provider.py  test_gui_build.py  test_gui_curves_page.py  test_gui_dashboard.py  test_gui_desktop.py  test_gui_graphs_page.py  test_gui_icons.py  test_gui_import_isolation.py  test_gui_local_backend.py  test_gui_service_page.py  test_hardware.py  test_history_file.py  test_install.py  test_install_linux.py  test_lhm_download.py  test_lhm_init.py  test_linux_hardware.py  test_linux_service.py  test_notifications.py  test_package_init.py  test_pawnio.py  test_pawnio_download.py  test_pawnio_version.py  test_platform_detection.py  test_profile_rules.py  test_profiles.py  (+13 more)
