[project]
name = "pysysfan"
dynamic = ["version"]
description = "Python fan control daemon for Windows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click",
    "pythonnet; sys_platform == 'win32'",
    "pyyaml",
    "requests",
    "rich",
    "packaging",
    "watchdog>=3.0",
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
]

[project.scripts]
pysysfan = "pysysfan.cli:main"
pysysfan-install-lhm = "pysysfan.install:install_lhm"
pysysfan-install-pawnio = "pysysfan.install:install_pawnio"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/pysysfan"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "ruff",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 10
timeout_method = "thread"
markers = [
    "asyncio: mark test as an async test",
]
addopts = [
    "--cov=pysysfan",
    "--cov-report=term-missing",
    "--cov-config=pyproject.toml",
]

[tool.coverage.run]
source = ["pysysfan"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
